    - LAV Video Decoder: Faster DXVA decoding in copy-back mode (direct output mode)
    - LAV Video Decoder: Support for HEVC Main10 DXVA2 decoding in copy-back mode
* Updated Catalan, Finnish, Japanese, Korean, Russian and Spanish translations
! EVR-CP/Sync renderers could produce wrong colors
! Ticket #5239, Fix a crash when specifying a non-existent monitor in the command line (/monitor)
! Ticket #5259, The auto fit factor could not be modified unless auto fit was used as auto-zoom
! Ticket #5262, The "Go to next/previous subtitle" feature did not work for some subtitles


1.7.8 - 25 January 2015
=======================
+ DVB: Show current event time in the status bar
+ DVB: Add context menu to the navigation dialog
+ Add Finnish and Serbian translations
+ Ticket #907, Enable "Properties" dialog for DVD and DVB playback modes
+ Ticket #1091, Support MediaInfo analyse for DVD
+ Ticket #1494, Add tooltip in the "Organize Favorites" dialog with path of the item
+ Ticket #2438, Keep history of recently opened DVD directories
+ Ticket #3647, Internal LAV Video Decoder: Support Cinepack and QPEG in low-merit mode
+ Ticket #4941, Support embedded cover-art
* DVB: Improve channel switching speed
* The "Properties" dialog should open faster being that the MediaInfo analysis is now done asynchronously
* Make double-click tolerance consistent with system settings
* Ticket #4978, Execute "once" after playback event when playlist ends, regardless of the loop count
* Ticket #4991, Text subtitles: "opaque box" outlines will now always be drawn even if the border width is set to 0.
  The size of the text is independent of the border width so there is no reason not to draw that part
* Ticket #5056, Position the text subtitles relative to the video frame by default
* Updated MediaInfoLib to v0.7.71
* Updated ZenLib to v0.4.29 r498
* Updated SoundTouch to v1.8.0 r201
* Updated Little CMS to v2.7 (git 8174681)
* Updated Unrar to v5.2.3
* Updated LAV Filters to v0.63.0.52: